# eth.watch

./: .env  .gitignore  .gitmodules  Cargo.toml  README.md  config.yaml  hardhat.config.js  package.json
contracts/: Fluidex.sol  Greeter.sol
scripts/: deploy_and_addtoken.js  fetch_gitsubmodule.sh
src/: config.rs  lib.rs  params.rs
src/basic_types/: mod.rs
src/config/: mod.rs
src/config/configs/: contracts.rs  eth_client.rs  eth_sender.rs  eth_watch.rs  mod.rs
src/contracts/: mod.rs
src/eth_client/: ethereum_gateway.rs  mod.rs  token_inquirer.rs
src/eth_client/clients/: http_client.rs  mock.rs  multiplexer.rs
src/eth_signer/: json_rpc_signer.rs  mod.rs  pk_signer.rs  raw_ethereum_tx.rs
src/eth_watch/: client.rs  eth_state.rs  mod.rs  received_ops.rs
src/types/: mod.rs  utils.rs
src/types/account/: mod.rs  pubkey_hash.rs  register_user.rs
src/types/add_token_op/: mod.rs
src/types/new_token_op/: mod.rs
src/types/operations/: deposit_op.rs  mod.rs
src/types/priority_ops/: mod.rs  tests.rs
src/types/tx/: mod.rs
src/types/tx/primitives/: eip1271_signature.rs  eth_batch_signature.rs  eth_signature.rs  mod.rs  packed_eth_signature.rs  time_range.rs  tx_hash.rs
src/utils/: convert.rs  mod.rs  panic_notify.rs  serde_wrappers.rs
