[package]
name = "eth_watcher"
version = "0.1.0"
authors = ["HAOYUatHZ <haoyu@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
config_rs = { package = "config", version = "0.10.1" }
dotenv = "0.15.0"
env_logger = "0.5"
ethabi = "12.0.0"
futures = "0.3"
log = "0.4"
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
tokio = { version = "0.2", features = ["full"] }
web3 = "0.13.0"

[[bin]]
name = "eth_watcher"
path = "src/bin/eth_watcher.rs"
